--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -123,15 +123,16 @@
                 </div>
               </div>
               <!-- Light table -->
-              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "ref", "title",  "total_employee", "status", "actions"]'>
-                <table class="table align-items-center table-flush">
+              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "client", "title",  "total_employee", "status", "date", "actions"]'>
+                <table class="table align-items-center table-flush" id="datatable-basic"> <!--  id="datatable-basic" -->
                   <thead class="thead-light">
                     <tr>
                       <th scope="col" class="sort" data-sort="n°">N°</th>
-                      <th scope="col" class="sort" data-sort="ref">Référence</th>
+                      <th scope="col" class="sort" data-sort="client">Entreprise</th>
                       <th scope="col" class="sort" data-sort="title">Titre</th>
                       <th scope="col" class="sort" data-sort="total_employee">Total Employées</th>
                       <th scope="col" class="sort" data-sort="status">Statut</th>
+                      <th scope="col" class="sort" data-sort="date">Date</th>
                       <th scope="col" class="sort" data-sort="Actions">Actions</th>
                     </tr>
                   </thead>
@@ -141,19 +142,22 @@
                         <td class="n°">
                           {{forloop.counter}}
                         </td>
-                        <th scope="ref">
-                          {{declaration.reference}}
-                        </th>
-                        <td class="title">
-                          {{declaration.title}}
+                        <td scope="client">
+                          {{declaration.created_by.profile.name}}
                         </td>
+                        <th class="title">
+                          {{declaration.title}}
+                        </th>
                         <td class="total_employe text-center">
                           {{declaration.employee_declarations.count}}
                         </td>
                         <td class="status">
                             {{declaration.get_status_display}}
                         </td>
-                        <td class="text-center justify-content-center">
+                        <td class="status">
+                          {{declaration.created_on|date:"d/m/y H:m"}}
+                      </td>
+                        <td >
                           <span>
                             {% if 'a-declarations-consulter' in user.permissions.codes or user.is_staff %}
                               <button class="btn btn-sm btn-icon-only" role="button" data-id="a-declarations-consulter" data-toggle="modal" data-target="#modal-declaration-{{declaration.id}}">View</button>
@@ -170,14 +174,17 @@
 
                                   <div class="card card-agency mt--4 mb--4">
                                     <div class="card-header text-center">
-                                      <div class="row text-center">
-                                        <div class="col">
+                                      <div class="row">
+                                        <div class="col text-left">
+                                          <i class="ni education_hat mr-2"></i><strong>Client:</strong> {{declaration.created_by.profile.name}}
+                                        </div>
+                                        <div class="col text-right">
                                           <i class="ni education_hat mr-2"></i><strong>Référence:</strong> {{declaration.reference}}
                                         </div>
                                       </div>
                                         
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body text-center">
                                       <div class="row mb-3">
                                         <div class="col">
                                           <i class="ni education_hat mr-2"></i><span class="text-muted">Titre:</span> 
@@ -472,7 +479,7 @@
                 </table>
               </div>
               <!-- Card footer -->
-              <div class="card-footer py-4">
+              <!-- <div class="card-footer py-4">
                 <nav aria-label="...">
                   <ul class="pagination justify-content-end mb-0">
                     <li class="page-item disabled">
@@ -496,7 +503,7 @@
                     </li>
                   </ul>
                 </nav>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -522,5 +529,21 @@
     $(".edit-link").click(function() {
       window.location = $(this).data("href");
     });
+  </script>
+
+  <!-- For tables purpose -->
+  <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+  <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+  <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+  <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
+  <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
+  <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
+  <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
+
+  <script>
+    // $(document).ready(function () {
+    //   console.log($('#datatable-basic_length').children().first()[0])
+    // });
   </script>
 {% endblock javascripts %}
