--- a/apps/templates/paiements/payments.html
+++ b/apps/templates/paiements/payments.html
@@ -118,14 +118,16 @@
                 </div>
               </div>
               <!-- Light table -->
-              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "ref", "payer", "amount", "actions"]'>
-                <table class="table align-items-center table-flush">
+              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "banque", "client", "payer", "amount", "date", "actions"]'>
+                <table class="table align-items-center table-flush" id="datatable-basic">
                   <thead class="thead-light">
                     <tr>
                       <th scope="col" class="sort" data-sort="n°">N°</th>
-                      <th scope="col" class="sort" data-sort="ref">Référence</th>
+                      <th scope="col" class="sort" data-sort="banque">Banque</th>
+                      <th scope="col" class="sort" data-sort="client">Entreprise</th>
                       <th scope="col" class="sort" data-sort="payer">Payeur</th>
                       <th scope="col" class="sort" data-sort="amount">Montant</th>
+                      <th scope="col" class="sort" data-sort="date">Date</th>
                       <th scope="col" class="sort" data-sort="Actions">Actions</th>
                     </tr>
                   </thead>
@@ -135,16 +137,22 @@
                         <td class="n°">
                           {{forloop.counter}}
                         </td>
-                        <th scope="ref">
-                          {{payment.reference}}
+                        <td class="banque">
+                          {{payment.created_by.profile.name}}
+                        </td>
+                        <th scope="client">
+                          {{payment.facture_ref.client.name}}
                         </th>
-                        <td class="payer">
+                        <td class="amount">
                           {{payment.payer}}
                         </td>
                         <td>
                             {{payment.amount}} {{payment.devise.sign}}
                         </td>
-                        <td class="text-center justify-content-center">
+                        <td class="date">
+                          {{payment.created_on|date:"d/m/y H:m"}}
+                        </td>
+                        <td >
                           <span>
                             {% if 'a-paiements-consulter' in user.permissions.codes or user.is_staff %}
                             <button class="btn btn-sm btn-icon-only" role="button" data-id="a-paiements-consulter" data-toggle="modal" data-target="#modal-payment-{{payment.id}}">View</button>
@@ -160,10 +168,11 @@
                                 <div class="modal-body">
 
                                   <div class="card card-agency mt--4 mb--4">
-                                    <div class="card-header text-center">
-                                      <div class="row text-center">
+                                    <div class="card-header ">
+                                      <div class="row ">
                                         <div class="col">
-                                          <i class="ni education_hat mr-2"></i><strong>Référence:</strong> {{payment.reference}}
+                                          <span class="text-left"><strong>Date:</strong> {{payment.created_on|date:"d/m/y H:m"}}</span> <br>
+                                          <strong>Référence:</strong> {{payment.reference}}
                                         </div>
                                       </div>
                                         
@@ -188,17 +197,17 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="row">
+                                      <div class="row text-center">
                                         <div class="col">
-                                          <i class="ni education_hat mr-2"></i><span class="text-muted">Nationalité:</span><br> 
+                                          <i class="ni education_hat mr-2"></i><span class="text-muted">Nationalité</span><br> 
                                           <strong>{{payment.payer.country_origin}}</strong>
                                         </div>
                                         <div class="col">
-                                          <i class="ni education_hat mr-2"></i><span class="text-muted">Employeur:</span><br> 
+                                          <i class="ni education_hat mr-2"></i><span class="text-muted">Employeur</span><br> 
                                           <strong>{{payment.payer.employer}}</strong>
                                         </div>
                                         <div class="col">
-                                          <i class="ni education_hat mr-2"></i><span class="text-muted">Fonction:</span><br> 
+                                          <i class="ni education_hat mr-2"></i><span class="text-muted">Fonction</span><br> 
                                           <strong>{{payment.payer.job}}</strong>
                                         </div>
                                       </div>
@@ -232,7 +241,7 @@
                 </table>
               </div>
               <!-- Card footer -->
-              <div class="card-footer py-4">
+              <!-- <div class="card-footer py-4">
                 <nav aria-label="...">
                   <ul class="pagination justify-content-end mb-0">
                     <li class="page-item disabled">
@@ -256,7 +265,7 @@
                     </li>
                   </ul>
                 </nav>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -283,4 +292,20 @@
       window.location = $(this).data("href");
     })
   </script>
+
+   <!-- For tables purpose -->
+   <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
+ 
+   <script>
+     // $(document).ready(function () {
+     //   console.log($('#datatable-basic_length').children().first()[0])
+     // });
+   </script>
 {% endblock javascripts %}
