bill print updated and tables ordering handled

--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -142,7 +142,7 @@
                         <td class="n°">
                           {{forloop.counter}}
                         </td>
-                        <td scope="client">
+                        <td scope="client" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;">
                           {{declaration.created_by.profile.name}}
                         </td>
                         <th class="title">
