--- a/apps/templates/paiements/factures.html
+++ b/apps/templates/paiements/factures.html
@@ -91,7 +91,7 @@
                         <td class="n°">
                           {{forloop.counter}}
                         </td>
-                        <td class="declaration">
+                        <td class="declaration" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;">
                           {{facture.declaration_ref.title}}
                         </td>
                         <th scope="ref">
