--- a/apps/templates/paiements/payments.html
+++ b/apps/templates/paiements/payments.html
@@ -140,7 +140,7 @@
                         <td class="banque">
                           {{payment.created_by.profile.name}}
                         </td>
-                        <th scope="client">
+                        <th scope="client" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;">
                           {{payment.facture_ref.client.name}}
                         </th>
                         <td class="amount">
