print finalized and exchange rate added to views

--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -123,7 +123,7 @@
                 </div>
               </div>
               <!-- Light table -->
-              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "client", "title",  "total_employee", "status", "date", "actions"]'>
+              <div class="table-responsive py-4" data-toggle="list" data-list-values='["n°", "client", "title",  "total_employee", "status", "date", "actions"]'>
                 <table class="table align-items-center table-flush" id="datatable-basic"> <!--  id="datatable-basic" -->
                   <thead class="thead-light">
                     <tr>
