--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -16,7 +16,10 @@
             <button type="button" class="close" data-action="search-close" data-target="#navbar-search-main" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
-          </form>
+          </form> 
+          <span class="ml-4 text-info font-weight-bold">
+            Taux du jour : {{taux.0.sign}} {{taux.0.value}} | {{taux.1.sign}} {{taux.1.value}} | {{taux.2.sign}} {{taux.2.value}}
+          </span>
           <!-- Navbar links -->
           <ul class="navbar-nav align-items-center  ml-md-auto ">
             <li class="nav-item d-xl-none">
