--- a/apps/templates/accounts/permissions.html
+++ b/apps/templates/accounts/permissions.html
@@ -129,7 +129,9 @@
                                           <div class="col">
                                             <div>
                                               <span class="heading"> <h2>Liste des autorisations</h2> </span>
-                                              {{permission.list}}
+                                              <textarea cols="50" rows="5" readonly>
+                                                {{permission.list}}
+                                              </textarea>
                                               
                                             </div>
                                           </div>
