--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -44,195 +44,212 @@
     <div class="row">
 
       {% if request.user.profile.type.uid != 2 %}
-      <!-- Déclarations -->
-      <div class="col-xl-4 col-md-6">
-        <div class="card card-stats">
-          <!-- Card body -->
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">Total Déclarations</h5>
-                <span class="h1 font-weight-bold mb-0 display-1">{{total_declarations.count}}</span>
-              </div>
-              <div class="col-auto">
-                <div class="icon icon-shape bg-gradient-blue text-white rounded-circle shadow">
-                  <i class="ni ni-chart-pie-35"></i>
-                </div>
-              </div>
-            </div>
-            <p class="mt-3 mb-0 text-sm text-center">
-              {% if request.user.profile.type.uid == 1 or request.user.profile.type.uid == 3 or request.user.profile.type.uid == 4 %}
-                <span class=" mr-2"><i class="ni ni-send"></i> Soumise: {{total_declarations | count_by_status:'submitted'}} </span>
-                <span class="text-success mr-2"><i class="ni ni-check-bold"></i> Validée: {{total_declarations | count_by_status:'validated'}} </span>
-                <span class="text-danger mr-2"><i class="ni ni-fat-remove"></i> Rejetée: {{total_declarations | count_by_status:'rejected'}} </span>
-              {% endif %}
-              {% if request.user.profile.type.uid == 1 %}
-              <span class=" mr-2"><i class="ni ni-send"></i> Non-Soumise: {{total_declarations | count_by_status:'unsubmitted'}} </span>
-              <span class=" mr-2"><i class="ni ni-send"></i> Facturée: {{total_declarations | count_by_status:'billed'}} </span>
-              {% endif %}
-              
-            </p>
-          </div>
-        </div>
-      </div>
-      {% endif %}
-
-      <!-- Factures -->
-      <div class="col-xl-4 col-md-6">
-        <div class="card card-stats">
-          <!-- Card body -->
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">Total Factures</h5>
-                <span class="h1 font-weight-bold mb-0 display-1">{{total_factures.count}}</span>
-              </div>
-              <div class="col-auto">
-                <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                  <i class="ni ni-active-40"></i>
-                </div>
-              </div>
-            </div>
-            <p class="mt-3 mb-0 text-sm text-center">
-              <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> Impayée: {{total_factures | count_by_status:'unpaid'}} </span>
-              <span class="text-success mr-4"><i class="fa fa-arrow-up"></i> Payée: {{total_factures | count_by_status:'paid'}} </span>
-              
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Paiements -->
-      <div class="col-xl-4 col-md-6">
-        <div class="card card-stats">
-          <!-- Card body -->
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">Total Paiements</h5>
-                <span class="h1 font-weight-bold mb-0 display-1">{{total_paiements.count}}</span>
-              </div>
-              <div class="col-auto">
-                <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-                  <i class="ni ni-money-coins"></i>
-                </div>
-              </div>
-            </div>
-            <p class="mt-3 mb-0 text-sm text-center">
-              <!-- <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span> -->
-              <span class="text-nowrap mr-2">Montant: </span>
-              <span class="text-nowrap mr-2"> {% if paiement_GNF %} {{paiement_GNF}} {% else %} 0 {% endif %} GNF</span>
-              <span class="text-nowrap mr-2"> {% if paiement_USD %} {{paiement_USD}} {% else %} 0 {% endif %} USD</span>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Employees -->
-      <div class="col-xl-4 col-md-6">
-        <div class="card card-stats">
-          <!-- Card body -->
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">Total Employés</h5>
-                <span class="h1 font-weight-bold mb-0 display-1">{{total_employees.count}}</span>
-              </div>
-              <div class="col-auto">
-                <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                  <i class="ni ni-active-40"></i>
-                </div>
-              </div>
-            </div>
-            <p class="mt-3 mb-0 text-sm text-center">
-              <span class="text-success mr-4"><i class="fa fa-arrow-up"></i> Enrolés: {{total_employees | count_by_status:'enrolled'}} </span>
-              <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> Non-Enrolés: {{total_employees | count_by_status:'unenrolled'}} </span>
-              
-            </p>
-          </div>
-        </div>
-      </div>
-
-
-      <!-- Agencies -->
-      <div class="col-xl-4 col-md-6">
-        <div class="card card-stats">
-          <!-- Card body -->
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">Total Agences</h5>
-                <span class="h1 font-weight-bold mb-0 display-1">{{total_agencies.count}}</span>
-              </div>
-              <div class="col-auto">
-                <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-                  <i class="ni ni-chart-pie-35"></i>
-                </div>
-              </div>
-            </div>
-            <p class="mt-3 mb-0 text-sm">
-              <span class="text-success mr-4"><i class="fa fa-arrow-up"></i> Conakry: {{agencies_conakry.count}} </span>
-              <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> Intérieur: {{agencies_interior.count}} </span>
-              
-            </p>
-          </div>
-        </div>
-      </div>
-      
-      <!-- Profiles -->
-      <div class="col-xl-4 col-md-6">
-        <div class="card card-stats">
-          <!-- Card body -->
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">Total Profils </h5>
-                <span class="h1 font-weight-bold mb-0 display-1">{{total_profiles.count}}</span>
-              </div>
-              <div class="col-auto">
-                <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                  <i class="ni ni-active-40"></i>
-                </div>
-              </div>
-            </div>
-            <p class="mt-3 mb-0 text-sm text-center">
-              <span class=" mr-2"><i class="fa fa-arrow-up"></i> ENTREPRISE: {{total_profiles | count_by_profile_type:4}} </span>
-              <span class=" mr-2"><i class="fa fa-arrow-up"></i> BANQUE: {{total_profiles | count_by_profile_type:2}} </span>
-              <span class=" mr-2"><i class="fa fa-arrow-up"></i> MINISTERE: {{total_profiles | count_by_profile_type:3}} </span>
-              <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> ADMIN: {{total_profiles | count_by_profile_type:1}} </span>
-            </p>
-          </div>
-        </div>
-      </div>
-      
-      <!-- Utilisateurs -->
-      <div class="col-xl-4 col-md-6">
-        <div class="card card-stats">
-          <!-- Card body -->
-          {% if request.user.profile.type.uid == 1 %}
+        <!-- Déclarations -->
+        <div class="col-xl-4 col-md-6">
+          <div class="card card-stats">
+            <!-- Card body -->
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Total Utilisateurs</h5>
-                  <span class="h1 font-weight-bold mb-0 display-1">{{total_users.count}}</span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Total Déclarations</h5>
+                  <span class="h1 font-weight-bold mb-0 display-1">{{total_declarations.count}}</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
-                    <i class="ni ni-chart-bar-32"></i>
+                  <div class="icon icon-shape bg-gradient-blue text-white rounded-circle shadow">
+                    <i class="ni ni-chart-pie-35"></i>
                   </div>
                 </div>
               </div>
-              <p class="mt-3 mb-0 text-sm">
-                <span class=" mr-2"><i class="ni ni-send"></i> Admin: {{total_users | count_by_user_type:1}} </span>
-                <span class=" mr-2"><i class="fa fa-arrow-up"></i> Agent: {{total_users | count_by_user_type:2}} </span>
-                <span class=" mr-2"><i class="fa fa-arrow-up"></i> Superviseur: {{total_users | count_by_user_type:3}} </span>
-                <span class=" mr-2"><i class="fa fa-arrow-up"></i> Aguipe: {{total_users | count_by_user_type:4}} </span>
-                <span class=" mr-2"><i class="fa fa-arrow-up"></i> TDSS: {{total_users | count_by_user_type:5}} </span>
+              <p class="mt-3 mb-0 text-sm text-center">
+                {% if request.user.profile.type.uid == 1 or request.user.profile.type.uid == 3 or request.user.profile.type.uid == 4 %}
+                  <span class=" mr-2"><i class="ni ni-send"></i> Soumise: {{total_declarations | count_by_status:'submitted'}} </span>
+                  <span class="text-success mr-2"><i class="ni ni-check-bold"></i> Validée: {{total_declarations | count_by_status:'validated'}} </span>
+                  <span class="text-danger mr-2"><i class="ni ni-fat-remove"></i> Rejetée: {{total_declarations | count_by_status:'rejected'}} </span>
+                {% endif %}
+                {% if request.user.profile.type.uid == 1 %}
+                <span class=" mr-2"><i class="ni ni-send"></i> Non-Soumise: {{total_declarations | count_by_status:'unsubmitted'}} </span>
+                <span class=" mr-2"><i class="ni ni-send"></i> Facturée: {{total_declarations | count_by_status:'billed'}} </span>
+                {% endif %}
+                
               </p>
             </div>
-          {% endif %}
+          </div>
         </div>
-      </div>
+      {% endif %}
+
+      {% if request.user.profile.type.uid != 3 %}
+        <!-- Factures -->
+        <div class="col-xl-4 col-md-6">
+          <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Total Factures</h5>
+                  <span class="h1 font-weight-bold mb-0 display-1">{{total_factures.count}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                    <i class="ni ni-active-40"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-sm text-center">
+                <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> Impayée: {{total_factures | count_by_status:'unpaid'}} </span>
+                <span class="text-success mr-4"><i class="fa fa-arrow-up"></i> Payée: {{total_factures | count_by_status:'paid'}} </span>
+                
+              </p>
+            </div>
+          </div>
+        </div>
+      {% endif %}
+
+      <!-- {% if request.user.profile.type.uid != 3 %} -->
+        <!-- Paiements -->
+        <div class="col-xl-4 col-md-6">
+          <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Total Paiements</h5>
+                  <span class="h1 font-weight-bold mb-0 display-1">{{total_paiements.count}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                    <i class="ni ni-money-coins"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-sm text-center">
+                <!-- <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span> -->
+                <span class="text-nowrap mr-2">Montant: </span>
+                <span class="text-nowrap mr-2"> {% if paiement_GNF %} {{paiement_GNF}} {% else %} 0 {% endif %} GNF</span>
+                <span class="text-nowrap mr-2"> {% if paiement_USD %} {{paiement_USD}} {% else %} 0 {% endif %} USD</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      <!-- {% endif %} -->
+
+      {% if request.user.profile.type.uid != 2 %}
+        <!-- Employees -->
+        <div class="col-xl-4 col-md-6">
+          <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Total Employés</h5>
+                  <span class="h1 font-weight-bold mb-0 display-1">{{total_employees.count}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                    <i class="ni ni-active-40"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-sm text-center">
+                <span class="text-success mr-4"><i class="fa fa-arrow-up"></i> Enrolés: {{total_employees | count_by_status:'enrolled'}} </span>
+                <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> Non-Enrolés: {{total_employees | count_by_status:'unenrolled'}} </span>
+                
+              </p>
+            </div>
+          </div>
+        </div>
+      {% endif %}
+
+      {% if request.user.profile.type.uid == 2 or request.user.profile.type.uid == 1 %}
+        {% if request.user.type.uid == 1 or request.user.type.uid == 3 %}
+          <!-- Agencies -->
+          <div class="col-xl-4 col-md-6">
+            <div class="card card-stats">
+              <!-- Card body -->
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">Total Agences</h5>
+                    <span class="h1 font-weight-bold mb-0 display-1">{{total_agencies.count}}</span>
+                  </div>
+                  <div class="col-auto">
+                    <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                      <i class="ni ni-chart-pie-35"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="mt-3 mb-0 text-sm text-center">
+                  <span class="text-success mr-4"><i class="fa fa-arrow-up"></i> Conakry: {{agencies_conakry.count}} </span>
+                  <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> Intérieur: {{agencies_interior.count}} </span>
+                 
+                </p>
+              </div>
+            </div>
+          </div>
+        {% endif %}
+      {% endif %}
+      
+      {% if request.user.profile.type.uid == 1 or request.user.profile.type.uid == 3 %}
+        <!-- Profiles -->
+        <div class="col-xl-4 col-md-6">
+          <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Total Profils </h5>
+                  <span class="h1 font-weight-bold mb-0 display-1">{{total_profiles.count}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                    <i class="ni ni-active-40"></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-3 mb-0 text-sm text-center">
+                <span class=" mr-2"><i class="fa fa-arrow-up"></i> ENTREPRISE: {{total_profiles | count_by_profile_type:4}} </span>
+                <span class=" mr-2"><i class="fa fa-arrow-up"></i> BANQUE: {{total_profiles | count_by_profile_type:2}} </span>
+                <span class=" mr-2"><i class="fa fa-arrow-up"></i> MINISTERE: {{total_profiles | count_by_profile_type:3}} </span>
+                
+                <span class="text-warning mr-4"><i class="fa fa-arrow-up"></i> ADMIN: {{total_profiles | count_by_profile_type:1}} </span>
+                
+              </p>
+            </div>
+          </div>
+        </div>
+      {% endif %}
+      
+      {% if request.user.type.uid == 1 or request.user.type.uid == 3 %}
+        <!-- Utilisateurs -->
+        <div class="col-xl-4 col-md-6">
+          <div class="card card-stats">
+            <!-- Card body -->
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">Total Utilisateurs</h5>
+                    <span class="h1 font-weight-bold mb-0 display-1">{{total_users.count}}</span>
+                  </div>
+                  <div class="col-auto">
+                    <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
+                      <i class="ni ni-chart-bar-32"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="mt-3 mb-0 text-sm text-center">
+                  {% if request.user.type.uid == 3 or request.user.type.uid == 1 %}
+                  <span class=" mr-2"><i class="fa fa-arrow-up"></i> Superviseur: {{total_users | count_by_user_type:3}} </span>
+                  <span class=" mr-2"><i class="fa fa-arrow-up"></i> Agent: {{total_users | count_by_user_type:2}} </span>
+                  <span class=" mr-2"><i class="fa fa-arrow-up"></i> Aguipe: {{total_users | count_by_user_type:4}} </span>
+                  {% endif %}
+                  {% if request.user.profile.type.uid == 1 %}
+                  <span class=" mr-2"><i class="fa fa-arrow-up"></i> TDSS: {{total_users | count_by_user_type:5}} </span>
+                  <span class=" mr-2"><i class="ni ni-send"></i> Admin: {{total_users | count_by_user_type:1}} </span>
+                  {% endif %}
+                </p>
+              </div>
+          </div>
+        </div>
+      {% endif %}
     </div>
 
     <div class="row">
