amount separator added and datatables updated

--- a/apps/templates/paiements/factures.html
+++ b/apps/templates/paiements/factures.html
@@ -98,7 +98,7 @@
                           {{facture.client.name}}
                         </th>
                         <td>
-                            {{facture.amount}} {{facture.devise.sign}}
+                            {{facture.amount | to_amount}} {{facture.devise.sign}}
                         </td>
                         <td class="status">
                           {{facture.get_status_display}}
@@ -106,7 +106,7 @@
                         <td class="date">
                           {{facture.created_on|date:"d/m/y H:m"}}
                         </td>
-                        <td >
+                        <td class="actions">
                           {% if 'a-factures-consulter' in user.permissions.codes or user.is_staff %}
                             <span>
                               <button class="btn btn-sm btn-icon-only" role="button" data-id="a-factures-consulter" data-toggle="modal" data-target="#modal-facture-{{facture.id}}">View</button>
@@ -173,10 +173,10 @@
                                                   <span class="name">{{facture.total_cadres}}</span>
                                                 </td>
                                                 <td class="text-center">
-                                                  <span class="name">{{job_categories.0.permit.price}}</span>
+                                                  <span class="name">{{job_categories.0.permit.price | to_amount}}</span>
                                                 </td>
                                                 <td class="budget">
-                                                  <span class="name">{{job_categories.0.permit.price | multiply:facture.total_cadres}}</span>
+                                                  <span class="name">{{job_categories.0.permit.price | multiply:facture.total_cadres | to_amount}}</span>
                                                 </td>
                                               </tr>
                                               {% endif %}
@@ -193,10 +193,10 @@
                                                   <span class="name">{{facture.total_agents}}</span>
                                                 </td>
                                                 <td class="text-center">
-                                                  <span class="name">{{job_categories.1.permit.price}}</span>
+                                                  <span class="name">{{job_categories.1.permit.price | to_amount}}</span>
                                                 </td>
                                                 <td class="budget">
-                                                  <span class="name">{{job_categories.1.permit.price | multiply:facture.total_agents}}</span>
+                                                  <span class="name">{{job_categories.1.permit.price | multiply:facture.total_agents | to_amount}}</span>
                                                 </td>
                                               </tr>
                                               {% endif %}
@@ -213,10 +213,10 @@
                                                   <span class="name">{{facture.total_ouvriers}}</span>
                                                 </td>
                                                 <td class="text-center">
-                                                  <span class="name">{{job_categories.2.permit.price}}</span>
+                                                  <span class="name">{{job_categories.2.permit.price | to_amount}}</span>
                                                 </td>
                                                 <td class="budget">
-                                                  <span class="name">{{job_categories.2.permit.price | multiply:facture.total_ouvriers}}</span>
+                                                  <span class="name">{{job_categories.2.permit.price | multiply:facture.total_ouvriers | to_amount}}</span>
                                                 </td>
                                               </tr>
                                               {% endif %}
@@ -225,7 +225,7 @@
                                           <tfoot>
                                             <tr class="border-top">
                                               <th class="text-left" colspan="3">TOTAL</th>
-                                              <th class="h2"><h2>{{facture.amount}} {{facture.devise.sign}}</h2></th>
+                                              <th class="h2"><h2>{{facture.amount | to_amount}} {{facture.devise.sign}}</h2></th>
                                             </tr>
                                           </tfoot>
                                         </table>
@@ -361,20 +361,4 @@
       window.location = $(this).data("href");
     })
   </script>
-
-   <!-- For tables purpose -->
-   <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
- 
-   <script>
-     // $(document).ready(function () {
-     //   console.log($('#datatable-basic_length').children().first()[0])
-     // });
-   </script>
 {% endblock javascripts %}
