--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -115,7 +115,7 @@
               </div>
               <!-- Light table -->
               <div class="table-responsive" data-toggle="list" data-list-values='["n°", "nom", "type", "statut", "actions"]'>
-                <table class="table align-items-center table-flush">
+                <table class="table align-items-center table-flush" id="datatable-basic">
                   <thead class="thead-light">
                     <tr>
                       <th scope="col" class="sort" data-sort="n°">N°</th>
@@ -161,7 +161,7 @@
                                 </span>
                             {% endif %}
                         </td>
-                        <td class="text-center justify-content-center">
+                        <td class="actions">
                           {% if 'a-profiles-consulter' in user.permissions.codes or user.is_staff %}
                             <span>
                               <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-id="a-profiles-consulter" data-target="#modal-profile-{{profile.uuid}}">View</button>
@@ -212,7 +212,7 @@
                                     <div class="card-body">
                                       <div class="row mt--4">
                                         <div class="col">
-                                          <div>
+                                          <div class="text-center">
                                             <span class="heading"> <h2>{{profile.name}}</h2> </span>
                                             <!-- <span class="description">Titre</span> -->
                                           </div>
@@ -226,10 +226,10 @@
                                           <i class="ni education_hat mr-2"></i><strong>Contact:</strong> {{profile.contact}}
                                         </div>
                                       </div>
-                                      <div>
+                                      <div class="text-center">
                                         <i class="ni education_hat mr-2"></i><strong>Email:</strong> {{profile.email}}
                                       </div>
-                                      <div>
+                                      <div class="text-center">
                                         <i class="ni education_hat mr-2"></i><strong>Adresse:</strong> {{profile.adresse}}
                                       </div>
                                     </div>
@@ -257,32 +257,7 @@
                   </tbody>
                 </table>
               </div>
-              <!-- Card footer -->
-              <div class="card-footer py-4">
-                <nav aria-label="...">
-                  <ul class="pagination justify-content-end mb-0">
-                    <li class="page-item disabled">
-                      <a class="page-link" href="#" tabindex="-1">
-                        <i class="fas fa-angle-left"></i>
-                        <span class="sr-only">Previous</span>
-                      </a>
-                    </li>
-                    <li class="page-item active">
-                      <a class="page-link" href="#">1</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                      <a class="page-link" href="#">
-                        <i class="fas fa-angle-right"></i>
-                        <span class="sr-only">Next</span>
-                      </a>
-                    </li>
-                  </ul>
-                </nav>
-              </div>
+              
             </div>
           </div>
         </div>
