--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -32,6 +32,12 @@
   <!-- Specific Page CSS goes HERE  -->  
   {% block stylesheets %}{% endblock stylesheets %}
 
+  <!-- DataTables CSS -->
+  <link rel="stylesheet" href="/static/assets/vendor/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="/static/assets/vendor/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css">
+  <!-- <link rel="stylesheet" href="/static/assets/vendor/datatables.net-select-bs4/css/select.bootstrap4.min.css"> -->
+  <link rel="stylesheet" href="/static/assets/vendor/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css">
+
   <!-- Argon CSS -->
   <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css">
 
@@ -60,6 +66,16 @@
 
    <!-- Specific Page JS goes HERE  -->
    {% block javascripts %}{% endblock javascripts %}
+
+   <!-- For tables purpose -->
+   <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
+   <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
   
   <!-- Argon JS -->
   <script src="/static/assets/js/argon.js?v=1.2.0"></script>
