--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -157,7 +157,7 @@
                         <td class="status">
                           {{declaration.created_on|date:"d/m/y H:m"}}
                       </td>
-                        <td >
+                        <td class="actions">
                           <span>
                             {% if 'a-declarations-consulter' in user.permissions.codes or user.is_staff %}
                               <button class="btn btn-sm btn-icon-only" role="button" data-id="a-declarations-consulter" data-toggle="modal" data-target="#modal-declaration-{{declaration.id}}">View</button>
@@ -529,21 +529,5 @@
     $(".edit-link").click(function() {
       window.location = $(this).data("href");
     });
-  </script>
-
-  <!-- For tables purpose -->
-  <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
-  <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-  <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-  <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-  <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
-  <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
-  <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
-  <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
-
-  <script>
-    // $(document).ready(function () {
-    //   console.log($('#datatable-basic_length').children().first()[0])
-    // });
   </script>
 {% endblock javascripts %}
